# AI-Chatbot-InfiChat

./: .env.example  .gitignore  README.md  check_project.py  package-lock.json  setup_windows.ps1  stop_all.bat
TTS and STT/: README.md  main.py  pyproject.toml  sample_dialogues.md  system_prompt.txt  voice_config.json
TTS and STT/app/: __init__.py  agent.py  cli.py  config.py  http_api.py  models.py  response_engine.py  stt_engine.py  tts_engine.py  tts_formatter.py
TTS and STT/tests/: test_agent.py  test_response_engine.py  test_tts_formatter.py
admin-frontend/: package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  check_cols.py  fix_auth.py  fix_db_schema.py  migrate_releases.py  requirements.txt  schema.sql
backend/app/: main.py
backend/app/api/: auth.py  chat.py  code_agent.py  image.py  oauth.py  rag.py  settings.py  voice.py
backend/app/core/: auth.py  config.py
backend/app/models/: chat.py  file.py  kokoro_setup.py  memory.py  otp.py  snippets.py  user.py
backend/app/schemas/: auth.py  chat.py
backend/app/services/: chat_service.py  email_service.py  image_service.py  llm_router.py  rag_service.py  voice_service.py
frontend/: asar_contents.txt  build_win.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  typescript-output.txt  vite.config.ts
frontend/assets/: index-BHMH1HJB.js  index-dSj4jz3u.css  index-lPJd4enl.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Logo.tsx  Sidebar.tsx  (+2 more)
infra/: docker-compose.yml  kokoro_releases.json  nginx.conf
sandbox/: Dockerfile.node-ts
(+11 files in other folders)
